<?xml version="1.0"?>
<package>
  <name>transforms3d</name>
  <version>:{version}</version>
  <description>3D transformations library</description>

  <maintainer email="james.goppert@gmail.com">jgoppert</maintainer>
  <license>BSD</license>

  <run_depend>catkin</run_depend>
  <buildtool_depend>cmake</buildtool_depend>
  <build_depend>boost</build_depend>
  <run_depend>boost</run_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
